istio-ambient-demo/k8s/authz/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: istio-demo-authz
  labels:
    istio.io/dataplane-mode: ambient
